client/css/styles.css
/* root elements */

html {
	height: 100%;
}

body {
	min-height: 100%;
	margin: 0;
}

/* id's */

#price-graph {
	overflow: visible;
	margin: auto;
	width: 800px;
	height: 400px;
}

/* reusable classes */

.module-title {
	padding: 0 1rem 1.5rem 1rem;
	margin: 0;
}

.no-link-underline {
	text-decoration: none;
}

.no-link-underline a {
	text-decoration: none;
}

.right-align-row {
	text-align: right;
}

.bold {
	font-weight: 600;
}

.flex {
	flex-grow: 1;
}

.white {
	color: white;
}

.pdl-8 {
	padding-left: 8px;
}

.pdl-10 {
	padding-left: 10px;
}

.pdt-8 {
	padding-top: 8px;
}

.pdt-10 {
	padding-top: 10px;
}

.mgr-10 {
	margin-right: 10px;
}

/* general - DealGiraffe product page */

.area {
	fill: rgba(51, 102, 255, .6);
}

.area-line {
	fill: none;
	stroke: black;
	stroke-width: 3px;
}

.area-null {
	fill: rgba(220, 220, 220, .8);
}

.axis path {
	fill: none;
	stroke: #777;
	shape-rendering: crispEdges;
}
.axis text {
	font-family: Lato;
	font-size: 13px;
}

.axis-label {
	font-size: 1.2em!important;
}

.container-all {
	background: rgb(240, 240, 240);
}

.footer {
	display: flex;
	justify-content: center;
	font-size: .8em;
	color: #999;
}

.footer li {
	display: inline;
}

.footer li a {
	text-decoration: none;
	color: deepskyblue;
}

.footer li .text {
	padding: 0 1rem;
}

.main-col {
	position: relative;
	min-height: 94vh;
	padding-bottom: 6vh; /* to accomodate for footer */
	max-width: 960px;
	margin: 0 auto;
	background: white;
	font-family: 'Hind Siliguri', sans-serif;
}

.main-navbar-list {
	color: white;
	list-style: none;
	padding-left: 0;
	margin-top: 0;
}

.main-navbar-list a {
	text-underline: none;
	text-decoration: none;
}

.main-navbar-list .dropdown-item {
	display: none;
	padding: .4rem 1rem;
	border-bottom: 1px solid #999;
	cursor: pointer;
}

.main-navbar-list-item {
	border-right: 1px solid #999;
	font-size: 1.2em;
	padding: .25rem .75rem;
	display: inline-block;
}

.main-navbar-list-item:hover {
	background: #999;
	cursor: pointer;
}

.price-comparison-table {
	margin: auto;
}

.price-comparison-table, th, td {
	border: 1px solid black;
    border-collapse: collapse;
}

.price-comparison-table th {
	min-width: 175px;
	text-align: center;
	padding: .5rem 0;
}

.price-comparison-table td {
	text-align: center;
	padding: .5rem 0;
}

.product-content-container {
	padding: 1rem;
	display: flex;
	flex-direction: row;
	align-items: flex-start;
}

.product-content-container .card {
	flex-grow: 0;
}

.product-content-container .product-info {
	flex-basis: 50%;
	flex-grow: 1;
	flex-shrink: 0;
	padding-left: 1rem;
}

.product-content-container .product-info ul{
	padding-left: 1.5rem;
}

.product-content-container .product-info .prices-container {
	position: relative;
}

.product-content-container .product-info .price {
	color: #999;
	margin-bottom: 6px;
	display: block;
}

.product-content-container .product-info .price:first-child {
	color: black;
	font-weight: 600;
	font-size: 2.5rem;
	margin-bottom: 5px;
}

.product-text-bottom {
	display: none;
	padding: 1rem;
}

.product-content-container .product-info .summary {
	padding-top: 8px;
}

.read-more-container {
	margin-top: 2rem;
	text-align: center;
}

.product-content-container .read-more-container button{
	min-width: 50%;
}

.product-details {
	padding-bottom: 2rem;
	border-bottom: 1px solid #666;
}

.product-details-features {
	margin-top: 0;
}

.product-details-price {
	font-weight: 700;
	font-size: 1.1rem;
	margin-top: 0;
}

.product-details-review {
	margin-top: 0;
}

.product-details-see-more {
	width: 6rem;
	height: 2.25rem;
	background: yellow;
	color: black;
	border: 1px solid black;
	border-radius: 5px;
	margin-right: 2rem;
}

.product-details-see-more:hover {
	cursor: pointer;
}

.product-details-text {
	padding: 0 1.5rem;
}

.price-graph-container {
	padding: 0 1rem;
	padding-bottom: 2rem;
	text-align: center;
}

/* general - DealGiraffe home page */

.product-items {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: space-between;
	padding-left: 0;
}

.product-items li {
	display: inline-block;
	width: 250px;
	height: 350px;
	margin: 1rem 0;
	margin-right: .35rem;
}

.product-items li:nth-child(3n+3) {
	margin-right: 0;
}

.search-box {
	display: flex;
	flex-direction: column;
	text-align: center;
	align-items: center;
	padding: 2rem 1rem 1rem 1rem;
	border-radius: 10px;
	background-color: lightcyan;
}

.search-box input {
	width: 80%;
	padding: .5rem;
}

.search-box input:focus {
	outline: none;
}

.search-box .search-button {
	max-width: 200px;
	margin-top: 1.5rem;
}

/* media queries */

/* anything smaller than 815 px */
@media(max-width: 815px) {
	.product-items {
		justify-content: space-around!important;
	}
}

/* anything smaller than 700px */
@media(max-width: 700px) {
	.search-options {
		flex-direction: column!important;
		justify-content: center!important;
	}

	.search-options .search-options-left {
		text-align: center;
		padding-top: 1rem;
	}

	.search-options .search-options-right {
		text-align: center;
	}

	.product-content-container .product-text-right {
		display: none!important;
	}

	.product-text-bottom {
		display: block!important;
	}

	.product-content-container .product-info {
		flex-grow: 0;
		flex-basis: 0;
	}

	.prices-container {
		text-align: right;
	}
}

/* anything smaller than 520px */
@media(max-width: 520px) {
	.main-navbar-list-item {
		display: block;
		text-align: left;
		border-right: none;
		border-bottom: none;
		/* changed on toggle */
		padding: 0;
		visibility: hidden;
		height: 0;
	}

	.main-navbar-list-item.shown {
		padding: .1rem .75rem;
		visibility: visible;
		height: inherit;
	}

	.main-navbar-list .dropdown-item {
		display: block;
	}

	.product-content-container {
		flex-direction: column;
		padding-bottom: 0;
	}

	.prices-container {
		padding-top: 1rem;
		text-align: left;
	}

	.product-text-bottom {
		padding-top: 0;
	}
}

